touchscreen_ws/log/build_2021-10-26_17-48-25/reachy_touchscreen/stdout_stderr.log
running egg_info
writing ../../build/reachy_touchscreen/reachy_touchscreen.egg-info/PKG-INFO
writing dependency_links to ../../build/reachy_touchscreen/reachy_touchscreen.egg-info/dependency_links.txt
writing entry points to ../../build/reachy_touchscreen/reachy_touchscreen.egg-info/entry_points.txt
writing requirements to ../../build/reachy_touchscreen/reachy_touchscreen.egg-info/requires.txt
writing top-level names to ../../build/reachy_touchscreen/reachy_touchscreen.egg-info/top_level.txt
reading manifest file '../../build/reachy_touchscreen/reachy_touchscreen.egg-info/SOURCES.txt'
writing manifest file '../../build/reachy_touchscreen/reachy_touchscreen.egg-info/SOURCES.txt'
running build
running build_py
copying reachy_touchscreen/head_following_arm.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
copying reachy_touchscreen/screen_touch.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
copying reachy_touchscreen/otis_test.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
copying reachy_touchscreen/screen_sub.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
copying reachy_touchscreen/otis_circle.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
copying reachy_touchscreen/screen_processing.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen
running install
running install_lib
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/head_following_arm.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/screen_touch.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/otis_test.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/screen_sub.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/otis_circle.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
copying /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/build/lib/reachy_touchscreen/screen_processing.py -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/head_following_arm.py to head_following_arm.cpython-38.pyc
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/screen_touch.py to screen_touch.cpython-38.pyc
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/otis_test.py to otis_test.cpython-38.pyc
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/screen_sub.py to screen_sub.cpython-38.pyc
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/otis_circle.py to otis_circle.cpython-38.pyc
byte-compiling /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/screen_processing.py to screen_processing.cpython-38.pyc
  File "/home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/screen_processing.py", line 36
    goal_x_px = #___ ?
                ^
SyntaxError: invalid syntax

running install_data
copying package.xml -> /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/share/reachy_touchscreen
running install_egg_info
removing '/home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/reachy_touchscreen/reachy_touchscreen.egg-info to /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/reachy_touchscreen
Installing talker script to /home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/reachy_touchscreen
writing list of installed files to '/home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/build/reachy_touchscreen/install.log'
